[package]
name = "blake_labs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
blake3 = "1.3.3"

# [dev-dependencies]
# rand = "0.8.5"
# once_cell = "1.17.0"
# criterion = "0.4"

# [[bench]]
# name = "blake_benches"
# harness = false
